# otus_homework_repo

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
02_homework/homework/: move_me_out.cpp
03_homework/: CMakeLists.txt  guess_num.cpp  guess_num.h  main.c  main.cpp  main.h
04_homework/: CMakeLists.txt
04_homework/include/: mul.hpp
04_homework/src/: mul.cpp
05_homework/: CMakeLists.txt
05_homework/include/: main.h
05_homework/source/: main.cpp
homework/: hello_world.cpp  move_me_out.h
project_work/: CMakeLists.txt
project_work/include/: main.h
project_work/source/: main.cpp
